--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "pages": [
-    "pages/post/post",
     "pages/welcome/welcome",
+    "pages/post/post",
     "pages/coffe/coffe"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#ECC0A8",
+    "navigationBarBackgroundColor": "#4A6141",
     "navigationBarTitleText": "MyCoffe",
     "navigationBarTextStyle": "white"
   },
