ES6方式编写缓存操作类

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#4A6141",
-    "navigationBarTitleText": "MyCoffe",
+    "navigationBarTitleText": "徐兴朴的第一个微信小程序",
     "navigationBarTextStyle": "white"
   },
   "style": "v2",
