--- a/project.config.json
+++ b/project.config.json
@@ -57,10 +57,17 @@
 			"current": -1,
 			"list": [
 				{
-					"id": -1,
+					"id": 0,
 					"name": "pages/post/post-detail/post-detail",
 					"pathName": "pages/post/post-detail/post-detail",
-					"query": "postId=2",
+					"query": "postId=1",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/post/post",
+					"pathName": "pages/post/post",
+					"query": "",
 					"scene": null
 				}
 			]
