实现评论功能

--- a/project.config.json
+++ b/project.config.json
@@ -69,6 +69,13 @@
 					"pathName": "pages/post/post",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/post/post-comment/post-comment",
+					"pathName": "pages/post/post-comment/post-comment",
+					"query": "postId=1",
+					"scene": null
 				}
 			]
 		}
